# add_executable(test15 test15.cpp)
add_executable(test1 test1.cpp)
add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(test4 test4.cpp)
add_executable(test5 test5.cpp)
add_executable(test6 test6.cpp)
add_executable(test7 test7.cpp)
add_executable(test8 test8.cpp)
add_executable(test9 test9.cpp)
add_executable(test10 test10.cpp)
add_executable(test11 test11.cpp)
add_executable(test12 test12.cpp)
add_executable(test13 test13.cpp)
