add_subdirectory(tut1)
add_subdirectory(tut2)
add_subdirectory(tut3)
add_subdirectory(tut4)
add_subdirectory(tut5)
add_subdirectory(tut6)
add_subdirectory(tut7)
add_subdirectory(tut8)
add_subdirectory(tut10)

add_subdirectory(lec4)
add_subdirectory(lec5)
add_subdirectory(lec6)
add_subdirectory(lec7)
add_subdirectory(lec8)
add_subdirectory(lec9)
add_subdirectory(lec10)
add_subdirectory(lec11)
add_subdirectory(lec12)
add_subdirectory(revision)

