find_package(Threads)

add_executable(9.1.1 11threadLambdaRace.cpp)
target_link_libraries(9.1.1 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.1.2 12threadFP.cpp)
target_link_libraries(9.1.2 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.1.3 13threadFO.cpp)
target_link_libraries(9.1.3 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.1.4 14threadLambda.cpp)
target_link_libraries(9.1.4 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.1.5 15threadLambdaCapture.cpp)
target_link_libraries(9.1.5 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.1.6 16threadMember.cpp)
target_link_libraries(9.1.6 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.1.7 17fetchadd.cpp)
target_link_libraries(9.1.7 ${CMAKE_THREAD_LIBS_INIT})

add_executable(9.2.1 21threadLambdaMutex.cpp)
target_link_libraries(9.2.1 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.2.2 22uniqueLock.cpp)
target_link_libraries(9.2.2 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.2.3 23grep.cpp)
target_link_libraries(9.2.3 ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(9.2.3 libstdc++fs.a)
add_executable(9.2.4 24algorithms.cpp)
target_link_libraries(9.2.4 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.2.5 25responsive.cpp)
target_link_libraries(9.2.5 ${CMAKE_THREAD_LIBS_INIT})
add_executable(9.2.6 26mapreduce.cpp)
target_link_libraries(9.2.6 ${CMAKE_THREAD_LIBS_INIT})
